--- a/10_PROJETO_MINIBLOG/src/index.css
+++ b/10_PROJETO_MINIBLOG/src/index.css
@@ -82,7 +82,7 @@ textarea {
 .btn.btn-outline {
   background-color: transparent;
   border-radius: 0;
-  color: #fff;
+  color: #000;
   border: 1px solid #000;
   padding: 7px 30px;
 }
